--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ footer {
   display: grid;
   height:100vh;
   grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 2fr 1fr 12fr 1fr;
+  grid-template-rows: 2fr 1fr 12fr 1fr;
   grid-template-areas: 
       "hd hd hd hd" 
       "nv nv nv nv"
